stop image card distorting, fixes #57 (#63)

--- a/hosting/src/app/shared/cards/image-card/image-card.component.scss
+++ b/hosting/src/app/shared/cards/image-card/image-card.component.scss
@@ -4,7 +4,8 @@
   height: min-content;
 
   img {
-    max-width: 100%;
+    width: 100%;
+    height: auto;
     padding: 0.5rem;
   }
 
